Horizontal scroll fixed

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@
 
 .social-links-top-header {
     height: 100%;
-    width: 50%;
+    width: 100%;
     float: right;
     padding-right: 5px;
 }
@@ -303,14 +303,18 @@
     display: block;
     border-radius: 10px;
     border-style: none;
+    width: 80%;
 }
 
 
 .search-bar-container {
     position: absolute;
-    top: 26%;
+    /*! top: 26%; */
     /* margin: 0 auto; */
-    left: 26%;
+    /*! left: 26%; */
+    /*! width: 100%; */
+    top: 25%;
+    left: 25%;
 }
 
 .search-bar-container select {
@@ -331,7 +335,7 @@
 .blur-layer {
     width: 100%;
     height: 100%;
-    /* position: absolute; */
+    position: relative;
     background-color: #00000026;
 }
 
